feat: :sparkles: Find by name and age